Fix scrollbar bug

--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,8 @@ body {
   width: 100%;
   /* width: 75vw; */
 }
+
+
+body::-webkit-scrollbar {
+  display: none;
+}
